@@ -455,22 +455,24 @@
           (call-interactively 'emms-play-directory-tree)
         (emms-playlist-mode-go))
     (message "Initial emms failed.")))
-(when (and (require 'emms-history nil t)
+(when (and (not (daemonp))
+           (require 'emms-history nil t)
            (file-exists-p emms-history-file)
            (init-emms))
   (setq emms-history-start-playing t)
   (emms-history-load))
-(defadvice emms-history-save (around delete-empty-history activate)
-  "If have not emms playlist, delete emms-history-file."
-  (let (have-playlist)
-    (dolist (buf (emms-playlist-buffer-list))
-      (when (> (buffer-size buf) 0)
-        (setq have-playlist t)))
-    (if (not have-playlist)
-        (when (file-exists-p emms-history-file)
-          (delete-file emms-history-file))
-      (ignore-errors (make-directory (file-name-directory emms-history-file)))
-      ad-do-it)))
+(when (featurep 'emms-history)
+  (defadvice emms-history-save (around delete-empty-history activate)
+    "If have not emms playlist, delete emms-history-file."
+    (let (have-playlist)
+      (dolist (buf (emms-playlist-buffer-list))
+        (when (> (buffer-size buf) 0)
+          (setq have-playlist t)))
+      (if (not have-playlist)
+          (when (file-exists-p emms-history-file)
+            (delete-file emms-history-file))
+        (ignore-errors (make-directory (file-name-directory emms-history-file)))
+        ad-do-it))))
 
 ;; anything
 (autoload 'anything "anything" nil t)
